public/css/main.css
body, p, h1, h2, h3, h4, h5, h6 {
  border: 0;
  margin: 0;
  padding: 0; }

a {
  color: #1A1A1A; }

h2 {
  font-weight: normal;
  text-align: center; }

header {
  background-color: white;
  margin-top: 5px;
  padding: 30px; }
  header img, header p {
    display: inline-block; }
  header h2 {
    margin: 0 auto;
    text-align: center; }

main {
  background-color: #E0F7FA;
  padding: 20px 100px; }

@media (max-width: 800px) {
  .special-header img, .special-header p {
    display: none; }

  main {
    padding: 20px 30px; } }
button, input[type="submit"] {
  border: none;
  -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  font-size: 14px;
  letter-spacing: 2px;
  padding: 8px 17px; }

button:hover, input[type="submit"]:hover {
  cursor: pointer;
  filter: alpha(opacity=70);
  opacity: 0.7; }

.sign-in {
  background-color: #00BCD4;
  font-size: 18px;
  margin-top: 10px; }

.sign-in-submit {
  background-color: #00BCD4;
  display: block;
  font-size: 18px;
  margin: 15px auto 0 auto; }

body {
  color: #1A1A1A;
  font-family: 'Roboto', sans-serif; }

a {
  text-decoration: none; }

nav {
  background-color: white;
  height: 80px; }

.nav-logo {
  height: 60px;
  float: left;
  padding: 10px;
  width: 60px; }

.nav-component-div {
  float: right;
  padding-top: 10px; }

.nav-component {
  background-color: #B2EBF2;
  display: inline-block;
  margin: 10px; }

.hamburger {
  display: none;
  float: right;
  height: 40px;
  padding: 20px;
  width: 40px; }

.hamburger:hover {
  cursor: pointer; }

.mobile-nav-component-div {
  -webkit-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.05);
  -ms-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.05);
  box-shadow: 0 4px 0 rgba(0, 0, 0, 0.05);
  display: none;
  font-size: 18px; }
  .mobile-nav-component-div p {
    border-top: 1px solid #F3F3F3;
    padding: 5px 0;
    text-align: center; }
  .mobile-nav-component-div .logout {
    padding-bottom: 10px; }
  .mobile-nav-component-div p:hover {
    cursor: pointer; }

.box-shadow {
  -webkit-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.05);
  -ms-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.05);
  box-shadow: 0 4px 0 rgba(0, 0, 0, 0.05); }

@media (max-width: 700px) {
  .nav-component-div {
    display: none; }

  .hamburger {
    display: block; } }
@media (min-width: 700px) {
  .mobile-nav-component-div {
    display: none; } }
.classes-container {
  background-color: white;
  -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  font-size: 18px;
  margin: 20px auto;
  padding: 40px;
  text-align: center; }
  .classes-container .add-class-button-container {
    display: block;
    margin-bottom: 40px; }
  .classes-container button {
    background-color: #26C6DA;
    display: inline-block;
    float: right; }

.class-div {
  background-color: #E0F7FA;
  -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  display: inline-block;
  margin: 40px;
  padding: 50px 100px; }

.class-div:hover {
  cursor: pointer;
  -webkit-transform: scale(1.05);
  -moz-transform: scale(1.05);
  -ms-transform: scale(1.05);
  -o-transform: scale(1.05);
  transform: scale(1.05); }

.overlay {
  background: rgba(0, 0, 0, 0.3);
  bottom: 0;
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%; }

.add-class-lightbox {
  background-color: white;
  -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  display: none;
  height: 200px;
  left: 30%;
  margin: 0 auto;
  padding: 20px;
  position: absolute;
  text-align: center;
  right: 30%;
  top: 40%;
  width: 500px; }
  .add-class-lightbox img {
    cursor: pointer;
    float: right;
    height: 30px;
    width: 30px; }
  .add-class-lightbox form {
    font-size: 18px;
    padding: 40px;
    text-align: center; }
    .add-class-lightbox form p, .add-class-lightbox form input[type="text"] {
      display: inline-block;
      font-size: 18px;
      padding: 5px; }
    .add-class-lightbox form input[type="submit"] {
      background-color: #26C6DA;
      display: block;
      margin: 15px auto 0 auto; }

@media (max-width: 900px) {
  .classes-container {
    padding: 20px 10px; }

  .class-div {
    margin: 20px; } }
.student-list {
  background-color: white;
  -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  font-size: 18px;
  margin: 20px auto;
  padding: 40px; }
  .student-list button {
    background-color: #26C6DA;
    float: right; }
  .student-list table {
    border-collapse: collapse;
    border-spacing: 10px;
    margin-top: 50px; }
  .student-list th, .student-list td {
    padding: 10px; }

.student-icon {
  height: 30px;
  width: 30px; }

.add-student-lightbox {
  background-color: white;
  -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  display: none;
  height: 320px;
  left: 30%;
  margin: 0 auto;
  padding: 20px;
  position: absolute;
  right: 30%;
  top: 40%;
  width: 500px; }
/* ... */

